# aursec

./: .gitignore  AGENTS.md  CMakeLists.txt  LICENSE  PKGBUILD  README.md  _aursec
src/: ai_reviewer.cpp  ai_reviewer.h  arg_parser.cpp  arg_parser.h  config.cpp  config.h  executor.cpp  executor.h  main.cpp  pkgbuild.cpp  pkgbuild.h  prompt.h
tests/: test_main.cpp
